--- a/demo/Cargo.toml
+++ b/demo/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "hello-world"
+name = "demo"
 version = "0.1.0"
-authors = ["Aaron Turner <aaron@aaronthedev.com>"]
+authors = ["Conor Heffron <conor.heffron@gmail.com>"]
 edition = "2018"
 
 [lib]
