--- a/.github/workflows/rust-ci-demo.yml
+++ b/.github/workflows/rust-ci-demo.yml
@@ -10,22 +10,23 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
+  
   build:
-
-    runs-on: ubuntu-latest
-
+  runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
     - uses: actions-rust-lang/setup-rust-toolchain@v1
     - name: Build Demo
       working-directory: ./demo
       run: cargo build --verbose
+  test:
     - name: Run tests for Demo
       working-directory: ./demo
-      run: cargo rustc -- --version && cargo test --verbose
+      run: cargo rustc -- --version && cargo test --all-features
 
   # Check formatting with rustfmt
   formatting:
+  runs-on: ubuntu-latest
     name: cargo fmt
     runs-on: ubuntu-latest
     steps:
