--- a/.github/workflows/rust-ci-demo.yml
+++ b/.github/workflows/rust-ci-demo.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - uses: actions-rust-lang/setup-rust-toolchain@v1
+    # - uses: actions-rust-lang/setup-rust-toolchain@v1
       with:
         components: rustfmt
     - name: Build Demo
@@ -24,5 +24,5 @@ jobs:
     - name: Run tests for Demo
       working-directory: ./demo
       run: cargo rustc -- --version cargo test --verbose # --all-features
-    - name: Rustfmt Check
-      uses: actions-rust-lang/rustfmt@v1
+    # - name: Rustfmt Check
+    #   uses: actions-rust-lang/rustfmt@v1
