--- a/.github/workflows/rust-ci-rocket.yml
+++ b/.github/workflows/rust-ci-rocket.yml
@@ -11,14 +11,17 @@ env:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
-    - name: Build Rocket App
+    # - uses: actions-rust-lang/setup-rust-toolchain@v1
+      with:
+        components: rustfmt
+    - name: Build Demo
       working-directory: ./rocketapp
       run: cargo build --verbose
-    - name: Run tests for Rocket App
+    - name: Run tests for Demo
       working-directory: ./rocketapp
-      run: cargo test --verbose
+      run: cargo rustc -- --version cargo test --verbose # --all-features
+    # - name: Rustfmt Check
+    #   uses: actions-rust-lang/rustfmt@v1
