--- a/.github/workflows/rust-ci-rocket.yml
+++ b/.github/workflows/rust-ci-rocket.yml
@@ -22,6 +22,6 @@ jobs:
       run: cargo build --verbose
     - name: Run tests for Demo
       working-directory: ./rocketapp
-      run: cargo rustc -- --version cargo test --verbose # --all-features
+      run: cargo rustc -- --version cargo test --all-features
     # - name: Rustfmt Check
     #   uses: actions-rust-lang/rustfmt@v1
