--- a/.github/workflows/rust-ci-rocket.yml
+++ b/.github/workflows/rust-ci-rocket.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - uses: actions-rust-lang/setup-rust-toolchain@v1
+    # - uses: actions-rust-lang/setup-rust-toolchain@v1
     - name: Build Demo
       working-directory: ./rocketapp
       run: cargo build --verbose
@@ -29,8 +29,8 @@ jobs:
     steps:
       - uses: actions/checkout@v5
       # Ensure rustfmt is installed and setup problem matcher
-      - uses: actions-rust-lang/setup-rust-toolchain@v1
-        with:
-          components: rustfmt
-      - name: Rustfmt Check
-        uses: actions-rust-lang/rustfmt@v1
+      # - uses: actions-rust-lang/setup-rust-toolchain@v1
+      #   with:
+      #     components: rustfmt
+      # - name: Rustfmt Check
+      #   uses: actions-rust-lang/rustfmt@v1
