--- a/demo/Cargo.toml
+++ b/demo/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "demo"
 version = "1.0.2"
+rust-version = "1.81.0"
 authors = ["Conor Heffron <conor.heffron@gmail.com>"]
 edition = "2018"
 
