--- a/rocketapp/Cargo.toml
+++ b/rocketapp/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "rocketapp"
 version = "1.0.2"
+rust-version = "1.81.0"
 edition = "2021"
 
 [dependencies]
 rocket = "0.5.0"
-rocket_dyn_templates = { version = "0.1.0", features = ["handlebars", "tera"] }
+rocket_dyn_templates = { version = "0.2.0", features = ["handlebars", "tera"] }
