--- a/.github/workflows/rust-ci-rocket.yml
+++ b/.github/workflows/rust-ci-rocket.yml
@@ -14,23 +14,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    # - uses: actions-rust-lang/setup-rust-toolchain@v1
-    - name: Build Demo
-      working-directory: ./rocketapp
-      run: cargo build --verbose
-    - name: Run tests for Demo
-      working-directory: ./rocketapp
-      run: cargo rustc -- --version cargo test --verbose # --all-features
-
-  # Check formatting with rustfmt
-  formatting:
-    name: cargo fmt
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v5
-      # Ensure rustfmt is installed and setup problem matcher
-      # - uses: actions-rust-lang/setup-rust-toolchain@v1
-      #   with:
-      #     components: rustfmt
-      # - name: Rustfmt Check
-      #   uses: actions-rust-lang/rustfmt@v1
+    - uses: actions-rs/cargo@v1
+    - uses: actions-rs/toolchain@v1
+      with:
+        working-directory: ./rocketapp
+        profile: minimal
+        toolchain: 1.81.0
+        override: true
+    - uses: actions-rs/cargo@v1
+      with:
+        working-directory: ./rocketapp
+        command: build
+        args: --verbose
+    - uses: actions-rs/cargo@v1
+      with:
+        working-directory: ./rocketapp
+        command: test
+        args: --verbose
