--- a/.github/workflows/rust-ci-rocket.yml
+++ b/.github/workflows/rust-ci-rocket.yml
@@ -6,21 +6,11 @@ on:
   pull_request:
     branches: [ "main" ]
 
-env:
-  CARGO_TERM_COLOR: always
-
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - uses: actions-rs/cargo@v1
-    - uses: actions-rs/toolchain@v1
-      with:
-        working-directory: ./rocketapp
-        profile: minimal
-        toolchain: 1.81.0
-        override: true
     - uses: actions-rs/cargo@v1
       with:
         working-directory: ./rocketapp
@@ -31,3 +21,15 @@ jobs:
         working-directory: ./rocketapp
         command: test
         args: --verbose
+    - uses: actions-rs/toolchain@v1
+      with:
+        working-directory: ./rocketapp
+        profile: minimal
+        toolchain: stable
+        override: true
+        components: rustfmt, clippy
+    - uses: actions-rs/cargo@v1
+      with:
+        working-directory: ./rocketapp
+        command: fmt
+        args: --all -- --check
