--- a/.github/workflows/rust-ci-rocket.yml
+++ b/.github/workflows/rust-ci-rocket.yml
@@ -6,28 +6,23 @@ on:
   pull_request:
     branches: [ "main" ]
 
+env:
+  CARGO_TERM_COLOR: always
+
 jobs:
+  
   build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - uses: actions-rs/cargo@v1
+    - uses: actions-rust-lang/setup-rust-toolchain@v1
       with:
-        working-directory: ./rocketapp
-        command: build
-        args: --verbose
-    - uses: actions-rs/cargo@v1
-      with:
-        working-directory: ./rocketapp
-        command: test
-        args: --verbose
-    - uses: actions-rs/toolchain@v1
-      with:
-        profile: minimal
-        toolchain: stable
-        override: true
-        components: rustfmt, clippy
-    - uses: actions-rs/cargo@v1
-      with:
-        command: fmt
-        args: --all -- --check
+        components: rustfmt
+    - name: Build Demo
+      working-directory: ./rocketapp
+      run: cargo build --verbose
+    - name: Run tests for Demo
+      working-directory: ./rocketapp
+      run: cargo rustc -- --version cargo test --verbose # --all-features
+    - name: Rustfmt Check
+      uses: actions-rust-lang/rustfmt@v1
