--- a/.github/workflows/rust-ci-rocket.yml
+++ b/.github/workflows/rust-ci-rocket.yml
@@ -15,14 +15,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - uses: actions-rust-lang/setup-rust-toolchain@v1
-      with:
-        components: rustfmt
+    # - uses: actions-rust-lang/setup-rust-toolchain@v1
+    #   with:
+    #     components: rustfmt
     - name: Build Demo
       working-directory: ./rocketapp
       run: cargo build --verbose
     - name: Run tests for Demo
       working-directory: ./rocketapp
       run: cargo rustc -- --version cargo test --verbose # --all-features
-    - name: Rustfmt Check
-      uses: actions-rust-lang/rustfmt@v1
+    # - name: Rustfmt Check
+    #   uses: actions-rust-lang/rustfmt@v1
