--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,6 +6,8 @@
 version: 2
 updates:
   - package-ecosystem: "rust-toolchain" # See documentation for possible values
-    directory: "/" # Location of package manifests
+    directories:
+      - "/rocketapp"
+      - "/demo"
     schedule:
       interval: "weekly"
