--- a/.github/workflows/rust-ci-demo.yml
+++ b/.github/workflows/rust-ci-demo.yml
@@ -25,6 +25,9 @@ jobs:
       run: cargo build --verbose
     - name: Run tests for Demo
       working-directory: ./demo
-      run: cargo rustc -- --version && rustup show && cargo test --verbose # --all-features
+      run: cargo rustc -- --version && rustup show && cargo test --all-features
+    - name: Run Demo Main
+      working-directory: ./demo
+      run: cargo run --bin demo
     # - name: Rustfmt Check
     #   uses: actions-rust-lang/rustfmt@v1
